--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.10.1",
     "babel-plugin-import": "^1.9.1",
     "mobx-react": "^5.2.8",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
